# chess-engine

./: .clang-format  .gitignore  CMakeLists.txt  Doxyfile  LICENSE  README.md
.github/workflows/: build-and-test.yml
include/: bitboard.h  board.h  debug.h  evaluate.h  magic.h  move.h  pieces.h  pregenerated_moves.h  search.h  slider_utils.h  uci_connection.h  zobrist.h
src/: bitboard.cpp  board.cpp  evaluate.cpp  main.cpp  move.cpp  pregenerated_moves.cpp  search.cpp  uci_connection.cpp  zobrist.cpp
tests/: perft.cpp
